@@ -17,6 +17,8 @@ extern GRECT    gl_normwin;
 extern WORD     gl_whsiztop;
 
 
+void xlate_obj_array(OBJECT *obj_array, int nobj);
+void xlate_fix_tedinfo(TEDINFO *tedinfo, int nted);
 ANODE *i_find(WORD wh, WORD item, FNODE **ppf, WORD *pisapp);
 WORD hndl_msg(void);
 WORD deskmain(void);
