@@ -4494,3 +4494,10 @@ Start... early ages
   idea by Laurent Vogel. (RFB)
 - bdos/fsfat.c: Rewrote clfix() for better performance. Based on an idea
   by Laurent Vogel. (RFB)
+
+2013-03-04
+- aes/gemdos.c aes/gemgraf.c aes/gemgsxif.c aes/gemgsxif.h aes/geminput.c
+  aes/gemmnlib.c aes/gempd.c aes/gemsclib.c aes/gemshlib.c aes/gemshlib.h
+  aes/gemwmlib.c aes/gemwrect.c bios/font.c desk/deskgraf.c desk/deskmain.h
+  tools/erd.c vdi/vdi_defs.h vdi/vdi_input.c Makefile: Convert remaining K&R
+  code to ANSI-C. Contributed by Eero Tamminen. (VRI)
